@@ -30,6 +30,7 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.apache.ignite.IgniteLogger;
 import org.apache.ignite.internal.util.lang.GridAbsClosure;
+import org.apache.ignite.internal.util.typedef.F;
 import org.apache.ignite.internal.util.typedef.internal.U;
 import org.apache.ignite.lang.IgniteInClosure;
 import org.jetbrains.annotations.Nullable;
@@ -145,7 +146,10 @@ public final class GridJavaProcess {
         String javaBin = resolveJavaBin(javaHome);
 
         procCmds.add(javaBin);
-        procCmds.addAll(jvmArgs == null ? U.jvmArgs() : jvmArgs);
+        procCmds.addAll(jvmArgs == null
+            ? U.jvmArgs()
+            : F.concat(false, F.viewReadOnly(U.jvmArgs(), s -> s, arg -> arg.startsWith("--add-opens")), jvmArgs)
+        );
 
         if (jvmArgs == null || (!jvmArgs.contains("-cp") && !jvmArgs.contains("-classpath"))) {
             String classpath = System.getProperty("java.class.path");
